--- a/Algorithmic Warm Up/Last Digit of Fibonacci Number/task-info.yaml
+++ b/Algorithmic Warm Up/Last Digit of Fibonacci Number/task-info.yaml
@@ -3,14 +3,14 @@ files:
 - name: last_digit_of_fibonacci_number.py
   visible: true
   placeholders:
-  - offset: 303
-    length: 9
+  - offset: 299
+    length: 188
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 303
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Unchecked
   text: |
     # python3
@@ -39,13 +39,13 @@ files:
   visible: true
   placeholders:
   - offset: 466
-    length: 9
+    length: 11
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 466
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Unchecked
   text: |
     import unittest
@@ -104,4 +104,8 @@ files:
   learner_created: false
 feedback_link: https://www.coursera.org/learn/algorithmic-toolbox/programming/b66y2/programming-assignment-1-introduction/discussions
 status: Unchecked
+feedback:
+  message: <html>Local tests passed, please <a href="https://www.coursera.org/learn/algorithmic-toolbox/programming/b66y2/programming-assignment-1-introduction/submission">submit
+    to Coursera</a></html>
+  time: Sat, 27 Mar 2021 16:40:37 UTC
 record: -1
