--- a/Algorithmic Warm Up/Fibonacci Number Again/task-info.yaml
+++ b/Algorithmic Warm Up/Fibonacci Number Again/task-info.yaml
@@ -3,14 +3,14 @@ files:
 - name: fibonacci_number_again.py
   visible: true
   placeholders:
-  - offset: 369
-    length: 9
+  - offset: 365
+    length: 45
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 369
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Unchecked
   text: |
     # python3
@@ -43,13 +43,13 @@ files:
   visible: true
   placeholders:
   - offset: 456
-    length: 9
+    length: 2
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 456
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Unchecked
   text: |
     import unittest
